# DZC26_HW

./: .dockerignore  .env.template  .gitignore  docker-compose.yaml  dzc26_w6.ipynb  ingest_data.py  pipeline.py  pyproject.toml
src/: Dockerfile
w1/: .dockerignore  .env.template  pyproject.toml
w1/notebooks/: notebook_test.ipynb  test.ipynb
w1/terraform/: main.tf
w1/terraform/keys/: my-credentials.json
w2/: .env  .env.example  docker-compose.yml  main.py  pyproject.toml  test.ipynb
w2/airflow/: airflow.env
w2/pipeline/: __init__.py  config.py
w2/pipeline/connectors/: __init__.py  postgres.py
w2/pipeline/extractors/: __init__.py  csv_extractor.py
w2/pipeline/loaders/: __init__.py  postgres_loader.py
w2/pipeline/schemas/: __init__.py  green_taxi.py  yellow_taxi.py
w3/: DZC_W3.ipynb  main.py  pyproject.toml
w4/: pyproject.toml
w4/taxi_rides_ny/: main.py
w4/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
w5/: dlt.ipynb  main.py  pyproject.toml
w6/: Makefile  answer.md  docker-compose.yaml  main.py  pyproject.toml
w6/src/job/: session_job.py
