[project]
name = "w1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251219",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
